Fin de la pagina de inicio

--- a/src/scss/ui/_index.scss
+++ b/src/scss/ui/_index.scss
@@ -4,3 +4,6 @@
 @forward "experiencia";
 @forward "proyectos";
 @forward "articulos";
+@forward "testimoniales";
+@forward "contacto";
+@forward "footer";
